prevent close button from wrapping when editing tags

--- a/client/css/less/components/sidebar.less
+++ b/client/css/less/components/sidebar.less
@@ -107,9 +107,10 @@
       .clearfix;
 
       .close {
+        margin: 0;
         float: right;
         font-size: 14px;
-        line-height: 24px;
+        line-height: 28px;
         font-family: Arial;
         font-weight: 700;
         .opacity(40);
@@ -126,7 +127,7 @@
         color: darken(@darkGray, 10%);
         border-radius: 2px;
         background: @sidebarText;
-	font-family: @sans-serif;
+        font-family: @sans-serif;
 
         &:focus {
           outline: none;
@@ -146,11 +147,11 @@
       }
 
       &.empty {
-	cursor: auto;
+        cursor: auto;
       }
 
       i {
-	margin-left: -2px;
+        margin-left: -2px;
       }
 
       span {
